--- a/menu.html
+++ b/menu.html
@@ -6,14 +6,20 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css"> 
 	<link rel="stylesheet" type="text/css" href="assets/css/menu.css">
 	<script type="text/javascript" src="node_modules\jquery\dist\jquery.min.js"></script>
+	<script type="text/javascript" src="assets/js/SpriteLoader.js"></script>
+	<script type="text/javascript" src="assets/js/Unit.js"></script>
+	<script type="text/javascript" src="assets/js/Archangel.js"></script>
+	<script type="text/javascript" src="assets/js/DeathKnight.js"></script>
+	<script type="text/javascript" src="assets/js/Vampire.js"></script>
 	<script type="text/javascript" src="assets/js/object.js"></script>
 	<script type="text/javascript" src="assets/js/Champion.js"></script>
+	<script type="text/javascript" src="assets/js/Champion1.js"></script>
 	<script type="text/javascript" src="assets/js/Units.js"></script>
 	<script type="text/javascript" src="assets/js/moveHeroes.js"></script>
 	</head>
 	<body>
 		<div id="pics">
-			<canvas width="1220" height="600"></canvas>
+			<canvas width="1120" height="600"></canvas>
 		</div>
 	</body>
 </html>
